--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "prepare": "husky install",
     "lint": "eslint . --fix",
     "build": "rimraf dist/ && tsc",
     "test": "jest"
@@ -26,7 +27,9 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
     "standard": "^16.0.3",
     "typescript": "^4.3.5"
   },
