--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "prepare": "husky install",
     "lint": "eslint . --fix",
     "build": "rimraf dist/ && tsc",
-    "test": "jest"
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:staged": "npm test -- --findRelatedTests src/",
+    "test:ci": "npm test -- --coverage"
   },
   "keywords": [],
   "author": "",
